# pytest-pogo

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  unittest-compose.yml
.github/workflows/: style.yml  tests.yml
pytest_pogo/: __init__.py
tests/: conftest.py  test_plugin.py
tests/migrations/: 20240310_01_vlvda-initial-migration.py  20240310_02_l30b4-second-migration.py
