[tool.poetry]
name = "pytest-pogo"
version = "0.0.3"
description = "Pytest plugin for pogo-migrate"
readme = "README.md"
homepage = "https://github.com/NRWLDev/pytest-pogo"
authors = [
    "Daniel Edgecombe <daniel@nrwl.co>"
]
maintainers = [
    "Daniel Edgecombe <daniel@nrwl.co>",
]
keywords = ["migrations", "migrate", "database", "asyncpg", "pytest"]
license = "Apache"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.9"

pogo-migrate = ">=0.0.8,<1.0.0"
pytest = ">=7,<9"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21"
pytest-cov = "^4.1.0"
pytest-random-order = "^1.0.4"
pytest-env = "^0.8.1"

# Style
ruff = "^0.3.0"
pre-commit = "^3.0.2"

# Release management
changelog-gen = {version = "^0.9", extras = ["bump-my-version"]}
asyncpg = "^0.29.0"

[tool.bumpversion]
current_version = "0.0.3"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.changelog_gen]
release = true
commit = true
reject_empty = true
allowed_branches = [
    "main",
]
date_format = "- %Y-%m-%d"
issue_link = "https://github.com/NRWLDev/pytest-pogo/issues/::issue_ref::"
commit_link = "https://github.com/NRWLDev/pytest-pogo/commit/::commit_hash::"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--random-order"
env = [
    "D:POSTGRES_DSN=postgres://unit:password@localhost:5436/unit",
]


[tool.coverage.report]
sort = "cover"
fail_under = 99
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
source = ["pytest_pogo"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "B008",    # fastapi involves a lot of function calls in function definitions
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "FIX002",  # allow TODO
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001", "S"]
"tests/*" = ["ANN", "D", "S101", "INP001"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pogo_migrate"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.poetry.plugins.pytest11]
pogo = "pytest_pogo"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pogo]
migrations = "./tests/migrations"
database_env_key = "POSTGRES_DSN"
