[project]
name = "pytest-pogo"
version = "0.1.1"
description = "Pytest plugin for pogo-migrate"
readme = "README.md"
authors = [
    {name = "Daniel Edgecombe", email = "daniel@nrwl.co"},
]
maintainers = [
    {name = "Daniel Edgecombe", email = "daniel@nrwl.co"},
]
requires-python = ">=3.9"
keywords = ["migrations", "migrate", "database", "asyncpg", "pytest"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pogo-migrate >= 0.0.8",
    "pytest >=7,<9",
]

[project.urls]
homepage = "https://github.com/NRWLDev/pytest-pogo"

[project.optional-dependencies]
dev = [

    "asyncpg >= 0.29.0",
    "pytest-asyncio >= 0.21",
    "pytest-cov >= 4.1.0",
    "pytest-random-order >= 1.0.4",
    "pytest-env >= 0.8.1",

    # Style
    "ruff >= 0.6.4",
    "pre-commit >= 3.0.2",

    # release
    "changelog-gen >= 0.12",
]

[project.entry-points.pytest11]
pogo = "pytest_pogo"

[tool.changelog_gen]
current_version = "0.1.1"
reject_empty = true
allowed_branches = [
    "main",
]
date_format = "- %Y-%m-%d"

[tool.changelog_gen.github]
strip_pr_from_description = true
extract_pr_from_description = true
extract_common_footers = true

[[tool.changelog_gen.extractors]]
footer = ["closes", "fixes", "Refs"]
pattern = '#(?P<issue_ref>\d+)'

[[tool.changelog_gen.link_generators]]
source = "issue_ref"
link = "https://github.com/NRWLDev/pytest-pogo/issues/{0}"

[[tool.changelog_gen.link_generators]]
source = "__change__"
text = "{0.short_hash}"
link = "https://github.com/NRWLDev/pytest-pogo/commit/{0.commit_hash}"

[[tool.changelog_gen.files]]
filename = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--random-order"
env = [
    "D:POSTGRES_DSN=postgres://unit:password@localhost:5436/unit",
]


[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
source = ["pytest_pogo"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "B008",    # fastapi involves a lot of function calls in function definitions
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "FIX002",  # allow TODO
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001", "S"]
"tests/*" = ["ANN", "D", "S101", "INP001"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pogo_migrate"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pogo]
migrations = "./tests/migrations"
database_config = "{POSTGRES_DSN}"
